# abnormality-recipe-ml

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
abnormality_recipe_ml/: main.py
tests/: test_abnormality_recipe_ml.py
